Feature/pulse check management (#45)
* chore: initial pulse setup

* feat: add pulse map

* test: add test suite for pulse validator and controller

* test: add test suite for pulse services and utils

* feat: add cors options

* feat: create mock data

* feat: add test suite and swagger for pulse management

* feat: add seeder file for the pulse score

* feat: add mail scheduler for pulse reporting

* test: fix test suited for pulse mailer

---------
