# src/server.js
@@ -8,9 +8,12 @@ const eventsRouter = require('./routes/eventsRouter');
 const leavesRouter = require('./routes/leavesRouter');
 const adminRouter = require('./routes/adminRouter');
 const teamRouter = require('./routes/teamRouter');
+const pulseRouter = require('./routes/pulseRouter');
+const { sendMail } = require('./utils/pulseMailer');
 
 const app = express();
 const port = 8080;
+
 app.use(cors());
 
 // const {verifyJWT} = require('./middlewares/auth');
@@ -28,10 +31,13 @@ const swaggerDocument = require('./swagger.json');
 //  console.error('FATAL ERROR: jwtPrivateKey is not defined');
 //  process.exit(1);
 //}
+var corsOptions = {
+  origin: 'http://localhost:3000',
+};
+app.use(cors(corsOptions));
 
 app.use(express.json());
 app.use(cookieParser());
-
 // app.use('/auth', auth);
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
@@ -41,6 +47,9 @@ app.use('/leaves', leavesRouter);
 app.use('/dashboard', dashRouter);
 app.use('/projects', projectRouter);
 app.use('/teams', teamRouter);
+app.use('/pulse', pulseRouter);
+sendMail();
+
 
 // app.use('/auth', auth);
 // app.use('/', verifyJWT, (req, res)=>{
